新增策略模式写的超市打折系统

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>mybatis-generate</module>
         <module>test</module>
         <module>calculator</module>
+        <module>shop-pay-system</module>
     </modules>
 
 
