--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>test</module>
         <module>calculator</module>
         <module>shop-pay-system</module>
+        <module>clothes-decorate</module>
     </modules>
 
     <dependencies>
