--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>calculator</module>
         <module>shop-pay-system</module>
         <module>clothes-decorate</module>
+        <module>Data Structure And Algorithm Analysis</module>
     </modules>
 
     <dependencies>
