--- a/test/pom.xml
+++ b/test/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>test</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
