--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>leetcode</module>
         <module>mybatis-generate</module>
         <module>test</module>
+        <module>written-examination</module>
+        <module>books</module>
     </modules>
 
     <dependencies>
