实战java高并发程序设计读书笔记

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>test</module>
         <module>written-examination</module>
         <module>books</module>
+        <module>books/high-concurrency-programming</module>
+        <module>books/high-concurrency-programming</module>
     </modules>
 
     <dependencies>
