新增书：JAVA编程思想

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>books</module>
         <module>books/high-concurrency-programming</module>
         <module>books/high-concurrency-programming</module>
+        <module>books/think-in-java</module>
     </modules>
 
     <dependencies>
