--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>books/high-concurrency-programming</module>
         <module>books/high-concurrency-programming</module>
         <module>books/think-in-java</module>
+        <module>base</module>
     </modules>
 
     <dependencies>
