--- a/base/pom.xml
+++ b/base/pom.xml
@@ -19,6 +19,12 @@
             <version>3.10</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
