--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <version>1.18.8</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>25.0-jre</version>
+        </dependency>
     </dependencies>
 
     <build>
